--- a/poke_cli_app/package.json
+++ b/poke_cli_app/package.json
@@ -14,6 +14,7 @@
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.6.4",
     "d3": "^5.15.1",
+    "jquery": "^3.5.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6"
   },
