--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "d3": "^5.15.1",
     "jquery": "^3.5.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.7.0",
