--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "poke_cli_app",
+  "name": "Panache",
   "version": "0.1.0",
   "private": true,
   "description": "## Project setup ``` npm install ```",
