--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vue/cli-plugin-router": "^4.3.1",
     "@vue/cli-service": "~4.3.0",
     "babel-eslint": "^10.1.0",
+    "biojs-io-newick": "^1.5.0",
     "bootstrap": "^4.3.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
