--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "main": "babel.config.js",
   "dependencies": {
     "@vue/cli": "^4.5.11",
+    "@greenelab/hclust": "0.0.1",
+    "@vue/composition-api": "^1.0.0-rc.9",
+    "@vueform/slider": "^1.0.5",
     "@yaireo/tagify": "^4.1.1",
     "bootstrap-vue": "^2.1.0",
     "circos": "^2.1.0",
