Clean up some debugger stuff

--- a/package.json
+++ b/package.json
@@ -60,9 +60,7 @@
     "rules": {}
   },
   "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
+    "last 1 years"
   ],
   "license": "ISC"
 }
